--- a/src/config.mk.in
+++ b/src/config.mk.in
@@ -97,6 +97,9 @@ RUBY_PRO	= @RUBY_PRO@
 RUBY_CFLAGS	= @RUBY_CFLAGS@
 RUBY_LIBS	= @RUBY_LIBS@
 
+ENCHANT_LIBS	= @ENCHANT_LIBS@
+ENCHANT_CFLAGS	= @ENCHANT_CFLAGS@
+
 SNIFF_SRC	= @SNIFF_SRC@
 SNIFF_OBJ	= @SNIFF_OBJ@
 
