--- a/src/configure.in
+++ b/src/configure.in
@@ -482,6 +482,22 @@ else
   AC_MSG_RESULT(yes)
 fi
 
+dnl Check for Enchant.
+AC_MSG_CHECKING(--enable-enchant)
+AC_ARG_ENABLE(enchant,
+        [  --enable-enchant    Include spell-checking with Enchant.], ,
+        [enable_enchant="no"])
+AC_MSG_RESULT($enable_enchant)
+
+if test "$enable_enchant" != "no"; then
+  PKG_CHECK_MODULES([ENCHANT], [enchant], AC_DEFINE(FEAT_ENCHANT))
+  if test "$fail_if_missing" = "yes" -a -z "$ENCHANT_LIBS"; then
+    AC_MSG_ERROR([could not configure enchant])
+  fi
+  AC_SUBST(ENCHANT_LIBS)
+  AC_SUBST(ENCHANT_CFLAGS)
+fi
+
 dnl Check for Lua feature.
 AC_MSG_CHECKING(--enable-luainterp argument)
 AC_ARG_ENABLE(luainterp,
@@ -2274,7 +2290,7 @@ dnl
 dnl AM_PATH_GTK([MINIMUM-VERSION, [ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND]]])
 dnl Test for GTK, and define GTK_CFLAGS, GTK_LIBDIR and GTK_LIBS
 dnl
-AC_DEFUN(AM_PATH_GTK,
+AC_DEFUN([AM_PATH_GTK],
 [
   if test "X$GTK_CONFIG" != "Xno" -o "X$PKG_CONFIG" != "Xno"; then
   {
