--- a/src/config.mk.in
+++ b/src/config.mk.in
@@ -97,6 +97,9 @@ RUBY_PRO	= @RUBY_PRO@
 RUBY_CFLAGS	= @RUBY_CFLAGS@
 RUBY_LIBS	= @RUBY_LIBS@
 
+HUNSPELL_LIBS	= @HUNSPELL_LIBS@
+HUNSPELL_CFLAGS	= @HUNSPELL_CFLAGS@
+
 SNIFF_SRC	= @SNIFF_SRC@
 SNIFF_OBJ	= @SNIFF_OBJ@
 
