--- a/src/configure.in
+++ b/src/configure.in
@@ -482,6 +482,22 @@ else
   AC_MSG_RESULT(yes)
 fi
 
+dnl Check for Hunspell.
+AC_MSG_CHECKING(--enable-hunspell)
+AC_ARG_ENABLE(hunspell,
+        [  --enable-hunspell    Include spell-checking with Hunspell.], ,
+        [enable_hunspell="no"])
+AC_MSG_RESULT($enable_hunspell)
+
+if test "$enable_hunspell" != "no"; then
+  PKG_CHECK_MODULES([HUNSPELL], [hunspell], AC_DEFINE(FEAT_HUNSPELL))
+  if test "$fail_if_missing" = "yes" -a -z "$HUNSPELL_LIBS"; then
+    AC_MSG_ERROR([could not configure hunspell])
+  fi
+  AC_SUBST(HUNSPELL_LIBS)
+  AC_SUBST(HUNSPELL_CFLAGS)
+fi
+
 dnl Check for Lua feature.
 AC_MSG_CHECKING(--enable-luainterp argument)
 AC_ARG_ENABLE(luainterp,
@@ -2274,7 +2290,7 @@ dnl
 dnl AM_PATH_GTK([MINIMUM-VERSION, [ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND]]])
 dnl Test for GTK, and define GTK_CFLAGS, GTK_LIBDIR and GTK_LIBS
 dnl
-AC_DEFUN(AM_PATH_GTK,
+AC_DEFUN([AM_PATH_GTK],
 [
   if test "X$GTK_CONFIG" != "Xno" -o "X$PKG_CONFIG" != "Xno"; then
   {
